[gd_scene load_steps=30 format=3 uid="uid://ib55kbfxdxak"]

[ext_resource type="Script" path="res://Scenes/Characters/Angel/angel.gd" id="1_hpm33"]
[ext_resource type="Texture2D" uid="uid://21ju0hp0lhtv" path="res://Textures/angel-Sheet.png" id="1_pcglg"]
[ext_resource type="Script" path="res://Components/CharacterHorizontalMovement.gd" id="3_na6yn"]
[ext_resource type="Script" path="res://Components/Hitbox.gd" id="4_vas2t"]
[ext_resource type="Script" path="res://Components/CharacterGravity.gd" id="4_wwat5"]
[ext_resource type="Script" path="res://Components/CharacterFollowTarget.gd" id="5_xt37q"]
[ext_resource type="Script" path="res://Components/Health.gd" id="7_b7qje"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i335u"]
radius = 14.75
height = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h2csl"]
radius = 59.5525

[sub_resource type="Animation" id="Animation_owmnx"]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_start_attack_cooldown"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_kk7p1"]
resource_name = "Die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_die"
}]
}

[sub_resource type="Animation" id="Animation_5hoa2"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:staggered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_hfjnt"]
resource_name = "Idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_byski"]
_data = {
"Attack": SubResource("Animation_owmnx"),
"Die": SubResource("Animation_kk7p1"),
"Hurt": SubResource("Animation_5hoa2"),
"Idle": SubResource("Animation_hfjnt")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aeshw"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wuypc"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0dksv"]
animation = &"Hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k058b"]
animation = &"Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gug8v"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idgpa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ynvum"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m5835"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yocl3"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_noa14"]
reset = false
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oookk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aryu6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_07osy"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8mgm0"]
states/Attack/node = SubResource("AnimationNodeAnimation_aeshw")
states/Attack/position = Vector2(496, -17.2118)
states/Die/node = SubResource("AnimationNodeAnimation_wuypc")
states/Die/position = Vector2(104, -65.5728)
states/Hurt/node = SubResource("AnimationNodeAnimation_0dksv")
states/Hurt/position = Vector2(286.222, -16.6667)
states/Idle/node = SubResource("AnimationNodeAnimation_k058b")
states/Idle/position = Vector2(389.333, 99.7778)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_gug8v"), "Idle", "Hurt", SubResource("AnimationNodeStateMachineTransition_idgpa"), "Hurt", "Idle", SubResource("AnimationNodeStateMachineTransition_ynvum"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_m5835"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_yocl3"), "Attack", "Hurt", SubResource("AnimationNodeStateMachineTransition_noa14"), "Hurt", "Die", SubResource("AnimationNodeStateMachineTransition_oookk"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_aryu6"), "Attack", "Die", SubResource("AnimationNodeStateMachineTransition_07osy")]
graph_offset = Vector2(0, -90.2395)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sdij4"]
radius = 18.0
height = 108.0

[node name="angel" type="CharacterBody2D" node_paths=PackedStringArray("characterHorizontalMovement", "characterGravity", "characterFollowTarget", "health")]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_hpm33")
characterHorizontalMovement = NodePath("CharacterHorizontalMovement")
characterGravity = NodePath("CharacterGravity")
characterFollowTarget = NodePath("CharacterFollowTarget")
health = NodePath("Health")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_pcglg")
hframes = 19
frame = 3

[node name="Hurtbox" type="Area2D" parent="Sprite"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hurtbox"]
position = Vector2(-6, 6)
shape = SubResource("CapsuleShape2D_i335u")
debug_color = Color(0, 1, 0, 0.419608)

[node name="Hitbox" type="Area2D" parent="Sprite"]
collision_layer = 4
collision_mask = 8
script = ExtResource("4_vas2t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
position = Vector2(-28.5, 15.5)
shape = SubResource("CircleShape2D_h2csl")
disabled = true
debug_color = Color(1, 0, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_byski")
}

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource("AnimationNodeStateMachine_8mgm0")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_sdij4")
debug_color = Color(1, 1, 1, 0.419608)

[node name="CharacterHorizontalMovement" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("3_na6yn")
character = NodePath("..")

[node name="CharacterGravity" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("4_wwat5")
character = NodePath("..")

[node name="CharacterFollowTarget" type="Node" parent="." node_paths=PackedStringArray("character", "characterHorizontalMovement")]
script = ExtResource("5_xt37q")
character = NodePath("..")
characterHorizontalMovement = NodePath("../CharacterHorizontalMovement")
stoppingDistance = 200.0

[node name="Health" type="Node" parent="."]
script = ExtResource("7_b7qje")
maxHealth = 30.0

[node name="StaggerRecovery" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationLabel" type="Label" parent="."]
offset_top = 58.5
offset_right = 92.0
offset_bottom = 84.5
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4

[node name="HPLabel" type="Label" parent="."]
offset_top = 80.5
offset_right = 49.0
offset_bottom = 106.5
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "3"

[node name="AttackCooldown" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Sprite/Hitbox" to="Sprite/Hitbox" method="_on_area_entered"]
[connection signal="timeout" from="StaggerRecovery" to="." method="_on_stagger_recovery_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
